--- a/module 1/Note.html
+++ b/module 1/Note.html
@@ -5,9 +5,10 @@
     <title>Note</title>
     <style>
         body {
+
             font-family: Arial, sans-serif;
             padding: 20px;
-            background: #f4f4f9;
+            background: #c5c5d1;
         }
         .container {
             max-width: 400px;
