--- a/Test.html
+++ b/Test.html
@@ -145,9 +145,16 @@
 // }
 
 
-    for (var i = 100; i > 0 ; i -=5){
-        console.log(i);
-    }
+    // for (var i = 100; i > 0 ; i -=5){
+    //     console.log(i);
+    // }
+
+var count = 0;
+do {
+    document.write("Looping
+");
+} while(count++ < 10);
+
 </script>
 </body>
 </html>
