--- a/module 1/Note.html
+++ b/module 1/Note.html
@@ -10,7 +10,7 @@
             padding: 20px;
             background: #c5c5d1;
         }
-        .container {
+        .main {
             max-width: 400px;
             margin: auto;
             text-align: center;
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="main">
         <h1>Quản lý Ghi chú</h1>
         <input id="noteInput" placeholder="Nhập ghi chú">
         <button onclick="addNote()">Thêm</button>
