--- a/module 1/lesson17-OOP/MoTaDienThoai.html
+++ b/module 1/lesson17-OOP/MoTaDienThoai.html
@@ -14,7 +14,7 @@
       margin: 0;
     }
 
-    .container {
+    .main {
       background-color: #fff;
       padding: 20px;
       border-radius: 8px;
@@ -69,7 +69,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="main">
     <h1>Mobile Phone Example</h1>
 
     <div class="status" id="nokiaStatus">Nokia - Pin: 100%</div>
