--- a/module 1/Ktra-Module1/Bai4.html
+++ b/module 1/Ktra-Module1/Bai4.html
@@ -4,26 +4,17 @@
     <meta charset="UTF-8">
     <title>Bài 4</title>
 <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #df3d3d;
-            margin: 0;
-            padding: 20px;
-            text-align: left;
-
-        }
-        .container {
-            max-width: 600px;
+        .main {
+            font: bold 20px Arial;
+            float: left;
+            max-width: 400px;
             margin: auto;
-            background: #a1f3e1;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-
         }
         h1 {
             text-align: center;
             color: #333;
+            float: left;
 
         }
         input, button {
@@ -41,15 +32,12 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
-        h2 {
-            margin-top: 20px;
-            color: #f30000;
-        }
+
 
 </style>
 </head>
 <body>
-<div class="container">
+<div class="main">
     <h1>Quản lý khách hàng</h1>
     <input type="text" id="maKhachHang" placeholder="Mã khách hàng" required>
     <input type="text" id="tenKhachHang" placeholder="Tên khách hàng" required>
@@ -60,8 +48,8 @@
     <h2>Danh sách : </h2>
     <div id="customerList"></div>
 </div>
-
 <script>
+
     const customerList = [];
     document.getElementById('themKhachHang').addEventListener('click',
         function() {
