--- a/module 2/Ktra/Bai2Login.html
+++ b/module 2/Ktra/Bai2Login.html
@@ -3,7 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Bài 2</title>
-    <link rel="stylesheet" href="Bai2Login.css">
+    <style>
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    font-family: Arial, sans-serif;
+}
+
+.login-container {
+    text-align: center;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #000;
+    width: 300px;
+}
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.btn {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 16px;
+    border: 1px solid #000;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #ddd;
+}
+    </style>
 </head>
 <body>
 <div class="login-container">
